--- a/red-bicicletas/views/index.pug
+++ b/red-bicicletas/views/index.pug
@@ -10,19 +10,18 @@ block content
       #navbarResponsive.collapse.navbar-collapse
         ul.navbar-nav.ml-auto
           li.nav-item
-            a.nav-link.js-scroll-trigger(href='#about') About
+            a.nav-link.js-scroll-trigger(href='#about') Nosotros
           li.nav-item
-            a.nav-link.js-scroll-trigger(href='#projects') Projects
+            a.nav-link.js-scroll-trigger(href='#projects') Bicicletas
           li.nav-item
-            a.nav-link.js-scroll-trigger(href='#signup') Contact
+            a.nav-link.js-scroll-trigger(href='#signup') Contacto
   // Masthead
   header.masthead
     .container.d-flex.h-100.align-items-center
       .mx-auto.text-center
-        h1.mx-auto.my-0.text-uppercase Grayscale
-        h2.text-white-50.mx-auto.mt-2.mb-5 A free, responsive, one page Bootstrap theme created by Start Bootstrap.
-        a.btn.btn-primary.js-scroll-trigger(href='#about') Get Started
-  // About
+        h1.mx-auto.my-0.text-uppercase Red de Bicicletas
+        h2.text-white-50.mx-auto.mt-2.mb-5 La Primera Comunidad de Ciclistas Urbanos
+        a.btn.btn-primary.js-scroll-trigger(href='#about') Comenzar
   section#about.about-section.text-center
     .container
       .row
@@ -33,42 +32,12 @@ block content
             a(href='http://startbootstrap.com/template-overviews/grayscale/') the preview page
             | . The theme is open source, and you can use it for any purpose, personal or commercial.
       img.img-fluid(src='assets/img/ipad.png' alt='')
-  // Projects
+    // Projects
   section#projects.projects-section.bg-light
     .container
       // Featured Project Row
-      .row.align-items-center.no-gutters.mb-4.mb-lg-5
-        .col-xl-8.col-lg-7
-          img.img-fluid.mb-3.mb-lg-0(src='assets/img/bg-masthead.jpg' alt='')
-        .col-xl-4.col-lg-5
-          .featured-text.text-center.text-lg-left
-            h4 Shoreline
-            p.text-black-50.mb-0
-              | Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!
-      // Project One Row
-      .row.justify-content-center.no-gutters.mb-5.mb-lg-0
-        .col-lg-6
-          img.img-fluid(src='assets/img/demo-image-01.jpg' alt='')
-        .col-lg-6
-          .bg-black.text-center.h-100.project
-            .d-flex.h-100
-              .project-text.w-100.my-auto.text-center.text-lg-left
-                h4.text-white Misty
-                p.mb-0.text-white-50
-                  | An example of where you can put an image of a project, or anything else, along with a description.
-                hr.d-none.d-lg-block.mb-0.ml-0
-      // Project Two Row
-      .row.justify-content-center.no-gutters
-        .col-lg-6
-          img.img-fluid(src='assets/img/demo-image-02.jpg' alt='')
-        .col-lg-6.order-lg-first
-          .bg-black.text-center.h-100.project
-            .d-flex.h-100
-              .project-text.w-100.my-auto.text-center.text-lg-right
-                h4.text-white Mountains
-                p.mb-0.text-white-50
-                  | Another example of a project with its respective description. These sections work well responsively as well, try this theme on a small screen!
-                hr.d-none.d-lg-block.mb-0.mr-0
+      .row.align-items-center.no-gutters
+      #main_map
   // Signup
   section#signup.signup-section
     .container
@@ -122,3 +91,4 @@ block content
   script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js')
   // Core theme JS
   script(src='/javascripts/scripts.js')
+  script(src='/javascripts/map.js')
